--- a/Week5/Week5/Base.lproj/Main.storyboard
+++ b/Week5/Week5/Base.lproj/Main.storyboard
@@ -178,7 +178,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="q6K-Uc-ofi">
-                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="iJ4-O0-q0U"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="iJ4-O0-q0U">
+                            <connections>
+                                <segue destination="TtN-cM-E3m" kind="presentation" modalPresentationStyle="fullScreen" id="jYv-85-PvO"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="contactImage" destination="eh2-FZ-xWk" id="QfV-Lh-QQE"/>
@@ -190,6 +194,78 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nqy-tT-cAj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1351.9083969465648" y="733.80281690140851"/>
+        </scene>
+        <!--Edit View Controller-->
+        <scene sceneID="8x6-wW-8V9">
+            <objects>
+                <viewController id="TtN-cM-E3m" customClass="EditViewController" customModule="Week5" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1KU-s0-T7k">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gkc-a5-UjP">
+                                <rect key="frame" x="0.0" y="62" width="393" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="cancel" id="2LZ-oU-Gdw">
+                                        <connections>
+                                            <action selector="cancel:" destination="TtN-cM-E3m" id="2wr-V5-vNc"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="save" id="pbA-ko-hV2">
+                                        <connections>
+                                            <action selector="save:" destination="TtN-cM-E3m" id="Ceu-Ve-Xfp"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3VY-s5-iQB">
+                                <rect key="frame" x="10" y="129" width="367" height="277"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tsb-lk-OSI">
+                                <rect key="frame" x="54" y="527" width="278" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8pC-Eb-qiJ">
+                                <rect key="frame" x="54" y="588" width="278" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fNg-xR-DiJ">
+                                <rect key="frame" x="54" y="657" width="278" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h9L-Eh-jxv">
+                                <rect key="frame" x="154" y="423" width="80" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Update"/>
+                                <connections>
+                                    <action selector="updateTheImage:" destination="TtN-cM-E3m" eventType="touchUpInside" id="aGO-8A-dQF"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="duw-bJ-NbW"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="image" destination="3VY-s5-iQB" id="Qs1-df-rCS"/>
+                        <outlet property="location" destination="fNg-xR-DiJ" id="SPQ-YM-sKz"/>
+                        <outlet property="name" destination="tsb-lk-OSI" id="eX5-w2-WrM"/>
+                        <outlet property="number" destination="8pC-Eb-qiJ" id="aMI-gV-XUG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X55-At-Yg2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2278.6259541984732" y="801.4084507042254"/>
         </scene>
         <!--Green View Controller-->
         <scene sceneID="fhB-kK-U8z">
